# azure-ops-dashboard

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AzureOpsDashboard.spec  CHANGELOG.md  DASHBOARD.md  DESIGN.md  LICENSE  README.ja.md  README.md  ai_reviewer.py  app_paths.py  build_exe.ps1  collector.py  docs_enricher.py  drawio_writer.py  exporter.py  gui_helpers.py  i18n.py  main.py  mcp.json  pyproject.toml  pyrightconfig.json
.github/: code-fix-error-notes.md  code-hard-builder-notes.md  code-review-notes.md  copilot-instructions.md  review-learnings.md
azure-ops-dashboard/: .gitignore  AGENTS.md  AzureOpsDashboard.spec  DESIGN.md  LICENSE  README.ja.md  README.md  TECH-SURVEY.md  ai_reviewer.py  build_exe.ps1  collector.py  drawio_validate.py  gui_helpers.py  i18n.py  main.py  pyproject.toml  tests.py
azure-ops-dashboard/docs/: README.md  architecture.drawio  submission-draft.md
azure-ops-dashboard/docs/media/: README.md
azure-ops-dashboard/presentations/: AzureOpsDashboard.pptx  content.json
azure-ops-dashboard/scripts/: collect-azure-env.ps1  mcp_smoke_test.py
azure-ops-dashboard/src/: app.py
azure-ops-dashboard/src/azure_ops_dashboard/: __init__.py  drawio_writer.py  i18n.py  main.py
docs/: README.md  azure-env-diagrammer-design.md  azure-env-diagrammer-tech-survey.md  design.md  idea-list.md  knowledge-summary.md  prompt-map.md  publish-checklist.md  sdk-challenge-requirements.md  submission-draft.md  tech-reference.md
output_sessions/: 20260220-01--step00-design-docs-all-fix.md  20260220-02--step01-env-builder-skeleton.md  20260220-03--step10-i18n-support.md  20260220-05--step10-i18n-support.md  20260221-01--azure-ops-dashboard-sp-login-and-rename.md  20260224-06--pptx-generation-and-skill-sync.md
presentations/: .gitkeep  AzureOpsDashboard.pptx  AzureOpsDashboard_TatsumiYamamoto.pptx
research/: 20260220-azure-env-to-drawio-mvp.md  manifest.md
scripts/: microsoft_docs_mcp_probe.py  validate_drawio.py
src/: app.py
step00-chat-cli/: DESIGN.md  README.ja.md  README.md  app_paths.py  chat_window.py  config.py  event_handler.py  main.py  sdk_client.py  session_manager.py  settings.json  tray_app.py
step01-env-builder/: DESIGN.md  README.ja.md  README.md  artifact_store.py  az_runner.py  bicep_generator.py  main.py
step02-dictation/: README.ja.md  README.md  main.py
step03-voice-agent/: README.ja.md  README.md
step10-azure-env-diagrammer/: DESIGN.md  README.md  app_paths.py  (+9 more)
(+29 files in other folders)
